index.css
body {
    background-image: url('img/kate.JPG');
    margin: 0;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

.page-wrapper {
    display: flex;
    flex-direction: column;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-inline: 50px;
    padding-top: 10px;
    background-color: black;
    font-family: Verdana;
    position: sticky;
    top: 0;
    left: 0;
    height: 50px;
}

.navbar a {
    color: white;
    text-decoration: none;
}

.navbar a:hover {
    color: white;
    text-decoration: none;
    cursor: pointer;
}

.nav-left-side-logo {
    display: flex;
    align-items: center;
}

.nav-right-side-links {
    display: flex;
    align-items: center;
    gap: 15px;
}

.nav-right-side-links a {
    color: rgb(170, 182, 192);
}

.intro-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: white;
    width: 100vw;
    height: 100vh;
}

h1 {
    font-size: 4em;
}

h2 {
    font-size: 2em;
}

.details-wrapper {
    display: flex;
    flex-direction: column;
    text-align: left;
    color: black;
    background-color: white;
    width: 100vw;
    height: 100vh;
}

img {
    width: 250px;
    height: 250px;
    padding: 0.5em;
}

.title {
    display: flex;
    font-size: 2em;
    justify-content: center;
}

.imageText {
    display: flex;
}

ul {
    columns: 2;
    text-align: left;
}

